Update on UI I removed the computer's part because I still can't wrap my head aroud animation. I will fix this in the near future.

--- a/styles.css
+++ b/styles.css
@@ -40,3 +40,10 @@ input {
     font-weight: bold;
 }
 
+.player-select {
+    border: 2px solid blue;
+}
+
+.computer-select {
+    border: 2px solid red;
+}
